@@ -1,4 +1,4 @@
-﻿zapret v.32
+﻿zapret v.33
 
 English
 -------
@@ -598,10 +598,17 @@ tpws_hostlist_https - пропускать через tpws весь трафик
 ipset - только заполнить ipset. ipset может быть применен для заворота трафика на прокси или на VPN
 custom - нужно самому запрограммировать запуск демонов в init скрипте и правила iptables
 
-Для tpws отдельно настраиваются опции для http и https :
+Опции tpws :
 
-TPWS_OPT_HTTP="--hostspell=HOST --split-http-req=method"
-TPWS_OPT_HTTPS="--split-pos=3"
+TPWS_OPT="--hostspell=HOST --split-http-req=method --split-pos=3"
+
+Настройка системы управления выборочным traffic offload (только openwrt)
+donttouch : выборочное управление отключено, используется системная настройка, простой инсталятор выключает системную настройку, если она не совместима с выбранным режимом
+none : выборочное управление отключено, простой инсталятор выключает системную настройку
+software : выборочное управление включено в режиме software, простой инсталятор выключает системную настройку
+hardware : выборочное управление включено в режиме hardware, простой инсталятор выключает системную настройку
+
+FLOWOFFLOAD=donttouch
 
 Опции nfqws для атаки десинхронизации DPI :
 
