@@ -50,11 +50,19 @@ network_find_wan6_all()
 
 ipt()
 {
- iptables -C "$@" 2>/dev/null || iptables -I "$@"
+	iptables -C "$@" 2>/dev/null || iptables -I "$@"
+}
+ipt_del()
+{
+	iptables -C "$@" 2>/dev/null && iptables -D "$@"
 }
 ipt6()
 {
- ip6tables -C "$@" 2>/dev/null || ip6tables -I "$@"
+	ip6tables -C "$@" 2>/dev/null || ip6tables -I "$@"
+}
+ipt6_del()
+{
+	ip6tables -C "$@" 2>/dev/null && ip6tables -D "$@"
 }
 
 # there's no route_localnet for ipv6
@@ -258,6 +266,76 @@ create_ipset()
 }
 
 
+is_flow_offload_avail()
+{
+	# $1 = '' for ipv4, '6' for ipv6
+	grep -q FLOWOFFLOAD /proc/net/ip$1_tables_targets
+}
+list_nfqws_rules()
+{
+	# $1 = '' for ipv4, '6' for ipv6
+	ip$1tables -S POSTROUTING -t mangle  | grep "NFQUEUE --queue-num $QNUM"  | sed -re 's/^-A POSTROUTING (.*) -j NFQUEUE.*$/\1/' -e "s/-m mark ! --mark $DESYNC_MARK\/$DESYNC_MARK//"
+}
+reverse_nfqws_rule()
+{
+	sed -e 's/-o /-i /' -e 's/--dport /--sport /' -e 's/--dports /--sports /' -e 's/ dst$/ src$/' -e 's/ dst / src /'
+}
+apply_flow_offloading_enable_rule()
+{
+	# $1 = '' for ipv4, '6' for ipv6
+	local i off='-j FLOWOFFLOAD'
+	[ "$FLOWOFFLOAD" = "hardware" ] && off="$off --hw"
+	i="forwarding_rule_zapret -m comment --comment zapret_traffic_offloading_enable -m conntrack --ctstate RELATED,ESTABLISHED $off"
+	echo enabling ipv${1:-4$1} flow offloading : $i
+	ip$1tables -A $i
+}
+apply_flow_offloading_excempt_rule()
+{
+	# $1 = '' for ipv4, '6' for ipv6
+	local i v
+	v=$1
+	shift
+	i="forwarding_rule_zapret $@ -m comment --comment zapret_traffic_offloading_excemption -j RETURN"
+	echo applying ipv${v:-4$v} flow offloading excemption : $i
+	ip${v}tables -A $i
+}
+
+flow_offloading_excempt_v()
+{
+	# $1 = '' for ipv4, '6' for ipv6
+
+	is_flow_offload_avail $1 || return 0
+
+	ipt$1_del forwarding_rule -j forwarding_rule_zapret
+	ip$1tables -F forwarding_rule_zapret 2>/dev/null
+	ip$1tables -X forwarding_rule_zapret 2>/dev/null
+
+	[ "$FLOWOFFLOAD" = 'software' -o "$FLOWOFFLOAD" = 'hardware' ] && {
+		ip$1tables -N forwarding_rule_zapret
+
+		list_nfqws_rules $1 |
+		while read rule; do
+			apply_flow_offloading_excempt_rule "$1" $rule
+		done
+
+		list_nfqws_rules $1 | grep -v "connbytes" | reverse_nfqws_rule |
+		while read rule; do
+			apply_flow_offloading_excempt_rule "$1" $rule
+		done
+	
+		apply_flow_offloading_enable_rule $1
+
+		ipt$1 forwarding_rule -j forwarding_rule_zapret
+	}
+
+	return 0
+}
+flow_offloading_excempt()
+{
+	[ "$DISABLE_IPV4" = "1" ] || flow_offloading_excempt_v
+	[ "$DISABLE_IPV6" = "1" ] || flow_offloading_excempt_v 6
+}
+
 zapret_apply_firewall()
 {
 	local rule
@@ -292,4 +370,6 @@ zapret_apply_firewall()
 	    		existf zapret_custom_firewall && zapret_custom_firewall
 			;;
 	esac
+
+	flow_offloading_excempt
 }
